feat : 새로운 구조 파악

--- a/new/src/index.html
+++ b/new/src/index.html
@@ -7,14 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
 
     <!-- css -->
-    <link rel="stylesheet" href="./index.css" type="text/css" />
-    <link rel="stylesheet" href="./style/header.css" type="text/css" />
-    <link rel="stylesheet" href="./style/footer.css" type="text/css" />
-    <link rel="stylesheet" href="./style/slide.css" type="text/css" />
+    <link rel="stylesheet" href="./style/index.css" type="text/css" />
 
     <!-- javascript -->
-    <script type="text/javascript" src="./js/header.js"></script>
-    <script type="text/javascript" src="./js/slide.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 
     <!-- router -->
     <script src="./router/router.js"></script>
@@ -26,25 +22,36 @@
         <img src="./images/logo/logo_black.png" alt="Logo" />
       </a>
       <div class="menu-con">
-        <div class="title-box">
-          <a href="#/about">회사소개</a>
-          <img src="./images/icon/down_icon.png" alt="Down" />
+        <div></div>
+        <div class="menu-box">
+          <div class="title-box">
+            <a href="#/about">회사소개</a>
+            <img src="./images/icon/down_icon.png" alt="Down" />
+          </div>
         </div>
-        <div class="title-box">
-          <a href="#/renewable">비즈니스 분야</a>
-          <img src="./images/icon/down_icon.png" alt="Down" />
+        <div class="menu-box">
+          <div class="title-box">
+            <a href="#/renewable">비즈니스 분야</a>
+            <img src="./images/icon/down_icon.png" alt="Down" />
+          </div>
         </div>
-        <div class="title-box">
-          <a href="#/tech">보유기술</a>
-          <img src="./images/icon/down_icon.png" alt="Down" />
+        <div class="menu-box">
+          <div class="title-box">
+            <a href="#/tech">보유기술</a>
+            <img src="./images/icon/down_icon.png" alt="Down" />
+          </div>
         </div>
-        <div class="title-box">
-          <a href="#/notice">IR</a>
-          <img src="./images/icon/down_icon.png" alt="Down" />
+        <div class="menu-box">
+          <div class="title-box">
+            <a href="#/notice">IR</a>
+            <img src="./images/icon/down_icon.png" alt="Down" />
+          </div>
         </div>
-        <div class="title-box">
-          <a href="#/news">PR</a>
-          <img src="./images/icon/down_icon.png" alt="Down" />
+        <div class="menu-box">
+          <div class="title-box">
+            <a href="#/news">PR</a>
+            <img src="./images/icon/down_icon.png" alt="Down" />
+          </div>
         </div>
       </div>
       <div class="right-box">
@@ -52,6 +59,7 @@
           <span class="kr">KR</span>
           <span class="hr">|</span>
           <span class="en">EN</span>
+          <span class="mb-lang-span"></span>
           <img src="./images/icon/lang_icon.png" alt="Lang" />
         </div>
         <img src="./images/icon/menu_color.png" alt="Menu" />
@@ -59,6 +67,7 @@
       <nav>
         <div></div>
         <div class="sub-menu-con">
+          <div></div>
           <div class="sub-menu-box">
             <a href="#">인사말</a>
             <a href="#">연혁</a>
@@ -98,7 +107,9 @@
         <div></div>
       </nav>
     </header>
+
     <div class="app"></div>
+
     <footer>
       <div class="box1">
         <img src="./images/logo/logo2.png" alt="" />
