--- a/new/src/pages/main.html
+++ b/new/src/pages/main.html
@@ -1,7 +1,123 @@
 <div class="slide-con">
-  <div class="slide bg1"></div>
-  <!-- <div class="slide bg2"></div>
-  <div class="slide bg3"></div>
-  <div class="slide bg4"></div>
-  <div class="slide bg5"></div> -->
+  <div class="slides">
+    <div class="slide bg1">
+      <div class="text-box">
+        <span class="title">렉스이노베이션의 첨단 정보통신 기술이 재생에너지의 스마트 그리드화를 이끌어 갑니다.</span>
+        <span class="sub">지속가능한 에너지 공급과 환경보호를 동시에 실현하는 기업</span>
+      </div>
+    </div>
+    <div class="slide bg2">
+      <div class="text-box">
+        <span class="title">친환경 미래기술을 선도하는 REC’s INNOVATION</span>
+        <div class="sub-box">
+          <span class="sub">끊임없는 연구개발로 쌓아온 고도화된 기술력으로</span>
+          <span class="sub">더 나은 미래를 위한 솔루션을 제공합니다.</span>
+        </div>
+      </div>
+    </div>
+    <div class="slide bg3">
+      <div class="text-box">
+        <span class="title">
+          청정 에너지로 우리의 미래를 밝혀나가는 길, 재생에너지의 힘과 혁신을 렉스이노베이션이 만들어갑니다.
+        </span>
+        <span class="sub">친환경 에너지를 통해 지구 환경을 보호하고 인류의 행복을 추구하는 기업</span>
+      </div>
+    </div>
+    <div class="slide bg4">
+      <div class="text-box">
+        <span class="title">대한민국의 바다 환경을 이용한 육상양어장에 소수력발전소를 건설합니다.</span>
+        <span class="sub">친환경 소수력발전소 100기 건설로 에너지자립을 선도하는 기업</span>
+      </div>
+    </div>
+    <div class="slide bg5">
+      <div class="text-box">
+        <span class="title">녹색금융 플랫폼 렉스펀드가 기후위기로부터 대한민국의 탄소중립을 앞당기겠습니다.</span>
+        <span class="sub">블록체인 기술을 활용한 Fintech 전문기업</span>
+      </div>
+    </div>
+  </div>
+  <div class="slide-bot-box">
+    <div class="timer-box">
+      <span class="page cur"></span>
+      <div class="timer-line">
+        <div class="time"></div>
+      </div>
+      <span class="page">05</span>
+    </div>
+    <div class="nav-box">
+      <img class="prev" src="../images/icon/prev_icon.png" alt="" />
+      <img class="next" src="../images/icon/next_icon.png" alt="" />
+    </div>
+  </div>
 </div>
+<div class="content-con">
+  <div class="content1-con">
+    <div class="title-box">
+      <span class="title">렉스이노베이션은 지속 가능한 미래를 위해 새로운 가치를 찾고 있습니다</span>
+      <div class="nav-box">
+        <img src="../images/icon/prev_icon_black.png" alt="" />
+        <img src="../images/icon/next_icon_black.png" alt="" />
+      </div>
+    </div>
+    <div class="card-con">
+      <div class="card">
+        <div class="text-box">
+          <span class="title">재생에너지 발전</span>
+          <span class="sub"
+            >재생에너지 발전은 지구의 자연 자원을 보존하면서 전기를 생산하는 방법으로, 지속 가능한 발전
+            방식입니다.</span
+          >
+          <div class="more-box">
+            <span>자세히보기</span>
+            <img src="../images/icon/detail_icon.png" alt="" />
+          </div>
+        </div>
+        <img src="../images/content/1_1.png" alt="" />
+      </div>
+      <div class="card">
+        <div class="text-box">
+          <span class="title">VPP(가상발전소)</span>
+          <span class="sub"
+            >VPP는 가상적으로 연결된 발전소로 여러 개별 에너지 생산 시스템이 하나의 통합 시스템으로 운영됩니다.
+          </span>
+          <div class="more-box">
+            <span>자세히보기</span>
+            <img src="../images/icon/detail_icon.png" alt="" />
+          </div>
+        </div>
+        <img src="../images/content/1_2.png" alt="" />
+      </div>
+      <div class="card">
+        <div class="text-box">
+          <span class="title">ESS(에너지저장시스템)</span>
+          <span class="sub"
+            >ESS는 에너지 저장 시스템으로, 전력 그리드의 안정성과 신재생 에너지 통합에 기여하는 중요한 기술입니다.</span
+          >
+          <div class="more-box">
+            <span>자세히보기</span>
+            <img src="../images/icon/detail_icon.png" alt="" />
+          </div>
+        </div>
+        <img src="../images/content/1_3.png" alt="" />
+      </div>
+      <div class="card">
+        <div class="text-box">
+          <span class="title">Power to Vehicle(P2V)</span>
+          <span class="sub"
+            >Power to Vehicle 은 차량에 전원을 공급하는 시스템으로 배터리에서 전기 에너지를 차량의 전기 시스템으로
+            공급하여 모든 기능을 작동시킵니다.</span
+          >
+          <div class="more-box">
+            <span>자세히보기</span>
+            <img src="../images/icon/detail_icon.png" alt="" />
+          </div>
+        </div>
+        <img src="../images/content/1_4.png" alt="" />
+      </div>
+    </div>
+  </div>
+  <div class="content2-con"></div>
+</div>
+
+<script src="../js/main.js"></script>
+<link rel="stylesheet" href="./style/main.css" type="text/css" />
