feat : 대소문자 test

--- a/new/src/pages/main.html
+++ b/new/src/pages/main.html
@@ -55,69 +55,314 @@
     <div class="title-box">
       <span class="title">렉스이노베이션은 지속 가능한 미래를 위해 새로운 가치를 찾고 있습니다</span>
       <div class="nav-box">
-        <img src="../images/icon/prev_icon_black.png" alt="" />
-        <img src="../images/icon/next_icon_black.png" alt="" />
+        <img class="prev" src="../images/icon/prev_icon_black.png" alt="" />
+        <img class="next" src="../images/icon/next_icon_black.png" alt="" />
       </div>
     </div>
-    <div class="card-con">
-      <div class="card">
-        <div class="text-box">
-          <span class="title">재생에너지 발전</span>
-          <span class="sub"
-            >재생에너지 발전은 지구의 자연 자원을 보존하면서 전기를 생산하는 방법으로, 지속 가능한 발전
-            방식입니다.</span
-          >
-          <div class="more-box">
-            <span>자세히보기</span>
-            <img src="../images/icon/detail_icon.png" alt="" />
+    <div class="hidden">
+      <div class="card-con">
+        <div class="card">
+          <div class="text-box">
+            <span class="title">재생에너지 발전</span>
+            <span class="sub"
+              >재생에너지 발전은 지구의 자연 자원을 보존하면서 전기를 생산하는 방법으로, 지속 가능한 발전
+              방식입니다.</span
+            >
+            <div class="more-box">
+              <span>자세히보기</span>
+              <img src="../images/icon/detail_icon.png" alt="" />
+            </div>
+          </div>
+          <div class="img-box">
+            <img src="../images/content/1_1.png" alt="" />
           </div>
         </div>
-        <img src="../images/content/1_1.png" alt="" />
-      </div>
-      <div class="card">
-        <div class="text-box">
-          <span class="title">VPP(가상발전소)</span>
-          <span class="sub"
-            >VPP는 가상적으로 연결된 발전소로 여러 개별 에너지 생산 시스템이 하나의 통합 시스템으로 운영됩니다.
-          </span>
-          <div class="more-box">
-            <span>자세히보기</span>
-            <img src="../images/icon/detail_icon.png" alt="" />
+        <div class="card">
+          <div class="text-box">
+            <span class="title">VPP(가상발전소)</span>
+            <span class="sub"
+              >VPP는 가상적으로 연결된 발전소로 여러 개별 에너지 생산 시스템이 하나의 통합 시스템으로 운영됩니다.
+            </span>
+            <div class="more-box">
+              <span>자세히보기</span>
+              <img src="../images/icon/detail_icon.png" alt="" />
+            </div>
+          </div>
+          <div class="img-box">
+            <img src="../images/content/1_2.png" alt="" />
           </div>
         </div>
-        <img src="../images/content/1_2.png" alt="" />
-      </div>
-      <div class="card">
-        <div class="text-box">
-          <span class="title">ESS(에너지저장시스템)</span>
-          <span class="sub"
-            >ESS는 에너지 저장 시스템으로, 전력 그리드의 안정성과 신재생 에너지 통합에 기여하는 중요한 기술입니다.</span
-          >
-          <div class="more-box">
-            <span>자세히보기</span>
-            <img src="../images/icon/detail_icon.png" alt="" />
+        <div class="card">
+          <div class="text-box">
+            <span class="title">ESS(에너지저장시스템)</span>
+            <span class="sub"
+              >ESS는 에너지 저장 시스템으로, 전력 그리드의 안정성과 신재생 에너지 통합에 기여하는 중요한
+              기술입니다.</span
+            >
+            <div class="more-box">
+              <span>자세히보기</span>
+              <img src="../images/icon/detail_icon.png" alt="" />
+            </div>
+          </div>
+          <div class="img-box">
+            <img src="../images/content/1_3.png" alt="" />
           </div>
         </div>
-        <img src="../images/content/1_3.png" alt="" />
-      </div>
-      <div class="card">
-        <div class="text-box">
-          <span class="title">Power to Vehicle(P2V)</span>
-          <span class="sub"
-            >Power to Vehicle 은 차량에 전원을 공급하는 시스템으로 배터리에서 전기 에너지를 차량의 전기 시스템으로
-            공급하여 모든 기능을 작동시킵니다.</span
-          >
-          <div class="more-box">
-            <span>자세히보기</span>
-            <img src="../images/icon/detail_icon.png" alt="" />
+        <div class="card">
+          <div class="text-box">
+            <span class="title">Power to Vehicle(P2V)</span>
+            <span class="sub"
+              >Power to Vehicle 은 차량에 전원을 공급하는 시스템으로 배터리에서 전기 에너지를 차량의 전기 시스템으로
+              공급하여 모든 기능을 작동시킵니다.</span
+            >
+            <div class="more-box">
+              <span>자세히보기</span>
+              <img src="../images/icon/detail_icon.png" alt="" />
+            </div>
+          </div>
+          <div class="img-box">
+            <img src="../images/content/1_4.png" alt="" />
           </div>
         </div>
-        <img src="../images/content/1_4.png" alt="" />
+        <div class="card">
+          <div class="text-box">
+            <span class="title">VPP(가상발전소)</span>
+            <span class="sub"
+              >VPP는 가상적으로 연결된 발전소로 여러 개별 에너지 생산 시스템이 하나의 통합 시스템으로 운영됩니다.
+            </span>
+            <div class="more-box">
+              <span>자세히보기</span>
+              <img src="../images/icon/detail_icon.png" alt="" />
+            </div>
+          </div>
+          <div class="img-box">
+            <img src="../images/content/1_2.png" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <div class="text-box">
+            <span class="title">ESS(에너지저장시스템)</span>
+            <span class="sub"
+              >ESS는 에너지 저장 시스템으로, 전력 그리드의 안정성과 신재생 에너지 통합에 기여하는 중요한
+              기술입니다.</span
+            >
+            <div class="more-box">
+              <span>자세히보기</span>
+              <img src="../images/icon/detail_icon.png" alt="" />
+            </div>
+          </div>
+          <div class="img-box">
+            <img src="../images/content/1_3.png" alt="" />
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="content2-con"></div>
-</div>
+  <div class="content2-con">
+    <div class="title-box">
+      <span class="title">PRODUCTS</span>
+      <div class="nav-box">
+        <img class="prev" src="../images/icon/prev_icon_black.png" alt="" />
+        <img class="next" src="../images/icon/next_icon_black.png" alt="" />
+      </div>
+    </div>
+    <div class="hidden">
+      <div class="card-con">
+        <div class="card bg">
+          <div class="text-box">
+            <span class="category">ESS</span>
+            <span class="title">SAVING POWER 5kw Home</span>
+            <span class="sub">심야전기보일러 대상 요금 절약형 ESS 모델입니다.</span>
+          </div>
+          <img src="../images/content/2_1.png" alt="" />
+        </div>
+        <div class="card">
+          <div class="text-box">
+            <span class="category">Renewable Energy</span>
+            <span class="title">유량변동대응 전력제어시스템</span>
+            <span class="sub">소수력발전용</span>
+          </div>
+          <img src="../images/content/2_2.png" alt="" />
+        </div>
+        <div class="card">
+          <div class="text-box">
+            <span class="category">EMS</span>
+            <span class="title">Sun-Q EMS S/W</span>
+            <span class="sub">태양광발전소 모니터링 시스템</span>
+          </div>
+          <img src="../images/content/2_3.png" alt="" />
+        </div>
+        <div class="card">
+          <div class="text-box">
+            <span class="category">Renewable Energy</span>
+            <span class="title">유량변동대응 전력제어시스템</span>
+            <span class="sub">소수력발전용</span>
+          </div>
+          <img src="../images/content/2_2.png" alt="" />
+        </div>
+        <div class="card bg">
+          <div class="text-box">
+            <span class="category">ESS</span>
+            <span class="title">SAVING POWER 5kw Home</span>
+            <span class="sub">심야전기보일러 대상 요금 절약형 ESS 모델입니다.</span>
+          </div>
+          <img src="../images/content/2_1.png" alt="" />
+        </div>
+      </div>
+      <div class="bot-btn"></div>
+    </div>
+  </div>
+  <div class="content3-con">
+    <img src="../images/content/3_1.png" alt="" />
+    <img src="../images/content/3_2.png" alt="" />
+  </div>
+  <div class="content4-con">
+    <div class="title-box">
+      <span class="title">NEWS</span>
+      <div class="nav-box">
+        <img class="prev" src="../images/icon/prev_icon_black.png" alt="" />
+        <img class="next" src="../images/icon/next_icon_black.png" alt="" />
+      </div>
+    </div>
 
-<script src="../js/main.js"></script>
-<link rel="stylesheet" href="./style/main.css" type="text/css" />
+    <div class="hidden">
+      <div class="card-con">
+        <div class="card">
+          <img src="../images/content/4_1.png" alt="" />
+          <div class="text-box">
+            <span class="title">애자일소다-렉스이노베이션, '지능형 태양광 발전 모니터링 시스템' 개발</span>
+            <span class="sub"
+              >[디지털데일리] 인공지능(AI) 서비스 기업 애자일소다는 재생에너지 운영관리 전문 렉스이노베이션과 '지능형
+              태양광 발전 모니터링..</span
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/content/4_2.png" alt="" />
+          <div class="text-box">
+            <span class="title">애자일소다, 렉스이노베이션-에스디플렉스와 '강화학습 기반 전력거래 시스템..</span>
+            <span class="sub"
+              >[프라임경제] 애자일소다(대표 최대우)는 재생에너지 발전 사업 O&M 전문기업 렉스이노베이션(대표 임정민)과
+              사물 인터넷(IoT)..</span
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/content/4_3.png" alt="" />
+          <div class="text-box">
+            <span class="title">애자일소다, 렉스이노베이션과 재생에너지 AI적용 '맞손'</span>
+            <span class="sub"
+              >[파이낸셜뉴스] 애자일소다가 렉스이노베이션과 재생에너지 산업 분야 인공지능(AI) 기술 적용을 위한 업무
+              협약을 체결했다.</span
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/content/4_4.png" alt="" />
+          <div class="text-box">
+            <span class="title">렉스이노베이션, 혁신성장 벤처기업 인증 획득</span>
+            <span class="sub"
+              >신재생 에너지 발전 및 에너지 IT 전문 기업 렉스이노베이션이 중소벤처기업부가 주관하는 혁신성장유형
+              벤처기업 인증을 획득했다.</span
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/content/4_1.png" alt="" />
+          <div class="text-box">
+            <span class="title">애자일소다-렉스이노베이션, '지능형 태양광 발전 모니터링 시스템' 개발</span>
+            <span class="sub"
+              >[디지털데일리] 인공지능(AI) 서비스 기업 애자일소다는 재생에너지 운영관리 전문 렉스이노베이션과 '지능형
+              태양광 발전 모니터링..</span
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="../images/content/4_3.png" alt="" />
+          <div class="text-box">
+            <span class="title">애자일소다, 렉스이노베이션과 재생에너지 AI적용 '맞손'</span>
+            <span class="sub"
+              >[파이낸셜뉴스] 애자일소다가 렉스이노베이션과 재생에너지 산업 분야 인공지능(AI) 기술 적용을 위한 업무
+              협약을 체결했다.</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="content5-con">
+    <div class="text-box">
+      <span class="title">CONTACT</span>
+      <div class="detail-box">
+        <span class="title">ADDRESS</span>
+        <div class="detail">
+          <span class="name">본사</span>
+          <span class="content"
+            >전남 나주시 교육길 13 스마트파크지식산업센터 G동 208호(본점), 202호(기업부설연구소), 201호(공장)</span
+          >
+        </div>
+        <div class="detail">
+          <span class="name">물류창고</span>
+          <span class="content">경기도 파주시 파평면 파평산로 498-170</span>
+        </div>
+      </div>
+      <div class="detail-box">
+        <span class="title">PHONE</span>
+        <div class="detail">
+          <span class="name">TEL</span>
+          <span class="content">061-820-7533</span>
+        </div>
+        <div class="detail">
+          <span class="name">FAX</span>
+          <span class="content">070-8230-7533</span>
+        </div>
+      </div>
+      <div class="detail-box">
+        <span class="title">E-mail</span>
+        <div class="detail">
+          <span class="content">recss@recss.com</span>
+        </div>
+      </div>
+    </div>
+    <div class="map-box">
+      <img src="../images/content/5_1.png" alt="" />
+      <img src="../images/content/5_2.png" alt="" />
+    </div>
+  </div>
+  <div class="content6-con">
+    <div class="hidden">
+      <div class="img-box">
+        <img src="../images/content/6_1.png" alt="" />
+      </div>
+      <div class="img-box">
+        <img src="../images/content/6_1.png" alt="" />
+      </div>
+      <div class="img-box">
+        <img src="../images/content/6_1.png" alt="" />
+      </div>
+      <div class="img-box">
+        <img src="../images/content/6_1.png" alt="" />
+      </div>
+      <div class="img-box">
+        <img src="../images/content/6_1.png" alt="" />
+      </div>
+      <div class="img-box">
+        <img src="../images/content/6_1.png" alt="" />
+      </div>
+    </div>
+  </div>
+  <div class="content7-con">
+    <div class="text-box">
+      <span class="title">지금 렉스이노베이션에게 문의하세요!</span>
+      <span class="sub">다양한 분야의 비즈니스 경험이 풍부한 전문가의 도움을 받아보세요</span>
+    </div>
+
+    <button>
+      문의하기
+      <img src="../images/icon/submit_icon.png" alt="" />
+    </button>
+  </div>
+
+  <script src="../js/main.js"></script>
+  <link rel="stylesheet" href="./style/main.css" type="text/css" />
+</div>
